[Fixes #126541327] Increased lineheight of moonicon so that the font icons would not be cut off.

--- a/apps/dg/resources/icon_font_style.css
+++ b/apps/dg/resources/icon_font_style.css
@@ -6,7 +6,7 @@
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
-	line-height: 1;
+	line-height: 1.1;
 
     /* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
